fdo#39589: Avoid using ulimit_cast between signed and unsigned.

If you do, things go very very wrong.  These *limit_cast try to be
clever and check ranges of various types before casting, but they
fail to do the right thing when casting a signed integer into unsigned.